@@ -10,7 +10,6 @@ import net.minecraft.client.option.GraphicsMode;
 import java.io.FileReader;
 import java.io.IOException;
 import java.lang.reflect.Modifier;
-import java.nio.charset.StandardCharsets;
 import java.nio.file.Files;
 import java.nio.file.Path;
 
@@ -20,10 +19,6 @@ public class SodiumGameOptions {
     public final NotificationSettings notifications = new NotificationSettings();
 
     private Path configPath;
-
-    public void notifyListeners() {
-        SodiumClientMod.onConfigChanged(this);
-    }
 
     public static class AdvancedSettings {
         public boolean animateOnlyVisibleTextures = true;
@@ -106,7 +101,6 @@ public class SodiumGameOptions {
             throw new IOException("Not a directory: " + dir);
         }
 
-        Files.write(this.configPath, GSON.toJson(this)
-                .getBytes(StandardCharsets.UTF_8));
+        Files.writeString(this.configPath, GSON.toJson(this));
     }
 }
